Full account and sso config

--- a/accounts-config.yaml
+++ b/accounts-config.yaml
@@ -25,11 +25,11 @@ workloadAccounts:
     description: The account hosting all the CI/CD tools
     email: chazalf+alz-noct-cicd@amazon.com
     organizationalUnit: SharedServices
-  # - name: Dev
-  #   description: The account hosting dev workloads
-  #   email: chazalf+alz-noct-dev@amazon.com
-  #   organizationalUnit: SDLC
-  # - name: Prod
-  #   description: The account hosting dev workloads
-  #   email: chazalf+alz-noct-prod@amazon.com
-  #   organizationalUnit: SDLC
+  - name: Dev
+    description: The account hosting dev workloads
+    email: chazalf+alz-noct-dev@amazon.com
+    organizationalUnit: SDLC
+  - name: Prod
+    description: The account hosting dev workloads
+    email: chazalf+alz-noct-prod@amazon.com
+    organizationalUnit: SDLC
