fix target acount

--- a/iam-config.yaml
+++ b/iam-config.yaml
@@ -71,7 +71,7 @@ identityCenter:
       principalName: Developers
       principalType: GROUP
       deploymentTargets:
-        organizationalUnits:
+        accounts:
           - Prod
     - name: DevOps
       permissionSetName: DevOpsAccess
