--- a/iam-config.yaml
+++ b/iam-config.yaml
@@ -25,65 +25,65 @@ identityCenter:
         awsManaged:
           - arn:aws:iam::aws:policy/AdministratorAccess
       sessionDuration: 60
-    - name: DeveloperAccess
-      policies:
-        awsManaged:
-          - arn:aws:iam::aws:policy/PowerUserAccess
-        customerManaged:
-          - DeveloperAccessIAMPolicy
-      sessionDuration: 60
-    - name: DevOpsAccess
-      policies:
-        awsManaged:
-          - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
-          - arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess
-          - arn:aws:iam::aws:policy/AWSCodePipelineFullAccess
-          - arn:aws:iam::aws:policy/AmazonS3FullAccess
-          - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
-          - arn:aws:iam::aws:policy/SecretsManagerReadWrite
-        customerManaged:
-          - DevOpsAccessIAMPolicy
-      sessionDuration: 60
-    - name: ApproverAccess
-      policies:
-        awsManaged:
-          - arn:aws:iam::aws:policy/AWSCodePipelineApproverAccess
-      sessionDuration: 60
-    - name: ViewOnlyAccess
-      policies:
-        awsManaged:
-          - arn:aws:iam::aws:policy/ViewOnlyAccess
-      sessionDuration: 60
-  identityCenterGroups:
-    - name: Developers
-    - name: DevOpsEngineers
-    - name: Approvers
-  identityCenterAssignments:
-    - name: DevDev
-      permissionSetName: DeveloperAccess
-      principalName: Developers
-      principalType: GROUP
-      deploymentTargets:
-        accounts:
-          - Dev
-    - name: DevProd
-      permissionSetName: ViewOnlyAccess
-      principalName: Developers
-      principalType: GROUP
-      deploymentTargets:
-        accounts:
-          - Prod
-    - name: DevOps
-      permissionSetName: DevOpsAccess
-      principalName: DevOpsEngineers
-      principalType: GROUP
-      deploymentTargets:
-        organizationalUnits:
-          - SharedServices
-    - name: Approvers
-      permissionSetName: ApproverAccess
-      principalName: Approvers
-      principalType: GROUP
-      deploymentTargets:
-        organizationalUnits:
-          - SharedServices
+  #   - name: DeveloperAccess
+  #     policies:
+  #       awsManaged:
+  #         - arn:aws:iam::aws:policy/PowerUserAccess
+  #       customerManaged:
+  #         - DeveloperAccessIAMPolicy
+  #     sessionDuration: 60
+  #   - name: DevOpsAccess
+  #     policies:
+  #       awsManaged:
+  #         - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
+  #         - arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess
+  #         - arn:aws:iam::aws:policy/AWSCodePipelineFullAccess
+  #         - arn:aws:iam::aws:policy/AmazonS3FullAccess
+  #         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
+  #         - arn:aws:iam::aws:policy/SecretsManagerReadWrite
+  #       customerManaged:
+  #         - DevOpsAccessIAMPolicy
+  #     sessionDuration: 60
+  #   - name: ApproverAccess
+  #     policies:
+  #       awsManaged:
+  #         - arn:aws:iam::aws:policy/AWSCodePipelineApproverAccess
+  #     sessionDuration: 60
+  #   - name: ViewOnlyAccess
+  #     policies:
+  #       awsManaged:
+  #         - arn:aws:iam::aws:policy/ViewOnlyAccess
+  #     sessionDuration: 60
+  # identityCenterGroups:
+  #   - name: Developers
+  #   - name: DevOpsEngineers
+  #   - name: Approvers
+  # identityCenterAssignments:
+  #   - name: DevDev
+  #     permissionSetName: DeveloperAccess
+  #     principalName: Developers
+  #     principalType: GROUP
+  #     deploymentTargets:
+  #       accounts:
+  #         - Dev
+  #   - name: DevProd
+  #     permissionSetName: ViewOnlyAccess
+  #     principalName: Developers
+  #     principalType: GROUP
+  #     deploymentTargets:
+  #       accounts:
+  #         - Prod
+  #   - name: DevOps
+  #     permissionSetName: DevOpsAccess
+  #     principalName: DevOpsEngineers
+  #     principalType: GROUP
+  #     deploymentTargets:
+  #       organizationalUnits:
+  #         - SharedServices
+  #   - name: Approvers
+  #     permissionSetName: ApproverAccess
+  #     principalName: Approvers
+  #     principalType: GROUP
+  #     deploymentTargets:
+  #       organizationalUnits:
+  #         - SharedServices
