remove custom pol

--- a/iam-config.yaml
+++ b/iam-config.yaml
@@ -29,8 +29,8 @@ identityCenter:
       policies:
         awsManaged:
           - arn:aws:iam::aws:policy/PowerUserAccess
-        customerManaged:
-          - DeveloperAccessIAMPolicy
+        # customerManaged:
+        #   - DeveloperAccessIAMPolicy
       sessionDuration: 60
     # - name: DevOpsAccess
     #   policies:
